# tg-bot

./: .gitignore  CMakeLists.txt  main.cpp
include/: auth_client.h  main_client.h  redis_client.h  session.h  session_store.h  telegram_bot.h  util.h
src/: auth_client.cpp  main.cpp  main_client.cpp  redis_client.cpp  session.cpp  session_store.cpp  telegram_bot.cpp  util.cpp
